// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`OptionList renders correctly virtual 1`] = `
<div>
  <div
    id="undefined_list"
    role="listbox"
    style="height: 0px; width: 0px; overflow: hidden;"
  >
    <div
      role="group"
    >
      <div
        aria-label="value-1"
        aria-posinset="1"
        aria-selected="true"
        aria-setsize="2"
        id="undefined_list_1"
        role="option"
      >
        1
      </div>
    </div>
  </div>
  <div
    class="rc-select-dropdown-list"
    style="position: relative;"
  >
    <div
      class="rc-select-dropdown-list-holder"
    >
      <div>
        <div
          class="rc-select-dropdown-list-holder-inner"
          style="display: flex; flex-direction: column;"
        >
          <div
            class="rc-select-item rc-select-item-group"
          >
            group1
          </div>
          <div
            aria-disabled="false"
            aria-label="value-1"
            class="rc-select-item rc-select-item-option rc-select-item-option-grouped rc-select-item-option-active rc-select-item-option-selected"
            title="1"
          >
            <div
              class="rc-select-item-option-content"
            >
              1
            </div>
            <span
              aria-hidden="true"
              class="rc-select-item-option-state"
              style="user-select: none;"
              unselectable="on"
            >
              <span
                class="rc-select-item-option-state-icon"
              >
                ✓
              </span>
            </span>
          </div>
          <div
            class="rc-select-item rc-select-item-group"
          >
            group2
          </div>
          <div
            class="rc-select-item rc-select-item-option rc-select-item-option-grouped"
            title="2"
          >
            <div
              class="rc-select-item-option-content"
            >
              2
            </div>
            <span
              aria-hidden="true"
              class="rc-select-item-option-state"
              style="user-select: none;"
              unselectable="on"
            >
              <span
                class="rc-select-item-option-state-icon"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`OptionList renders correctly without virtual 1`] = `
<div>
  <div
    class="rc-select-dropdown-list"
    style="position: relative;"
  >
    <div
      class="rc-select-dropdown-list-holder"
    >
      <div>
        <div
          class="rc-select-dropdown-list-holder-inner"
          id="undefined_list"
          role="listbox"
          style="display: flex; flex-direction: column;"
        >
          <div
            class="rc-select-item rc-select-item-group"
          >
            group1
          </div>
          <div
            aria-disabled="false"
            aria-label="value-1"
            aria-selected="true"
            class="rc-select-item rc-select-item-option rc-select-item-option-grouped rc-select-item-option-active rc-select-item-option-selected"
            id="undefined_list_1"
            role="option"
            title="1"
          >
            <div
              class="rc-select-item-option-content"
            >
              1
            </div>
            <span
              aria-hidden="true"
              class="rc-select-item-option-state"
              style="user-select: none;"
              unselectable="on"
            >
              <span
                class="rc-select-item-option-state-icon"
              >
                ✓
              </span>
            </span>
          </div>
          <div
            class="rc-select-item rc-select-item-group"
          >
            group2
          </div>
          <div
            aria-selected="false"
            class="rc-select-item rc-select-item-option rc-select-item-option-grouped"
            id="undefined_list_3"
            role="option"
            title="2"
          >
            <div
              class="rc-select-item-option-content"
            >
              2
            </div>
            <span
              aria-hidden="true"
              class="rc-select-item-option-state"
              style="user-select: none;"
              unselectable="on"
            >
              <span
                class="rc-select-item-option-state-icon"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
